--- a/gib-collab.Rmd
+++ b/gib-collab.Rmd
@@ -26,3 +26,13 @@ plot(cars)
 hist(mpg)
 ```
 
+
+```{r}
+library(palmerpenguins)
+library(tidyverse)
+
+ggplot(data = penguins, aes(x= flipper_length_mm, y = body_mass_g))+ 
+  geom_line() +
+  labs(title = "Nick's beautiful graph")
+```
+
