--- a/gib-collab.Rmd
+++ b/gib-collab.Rmd
@@ -11,11 +11,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Hi Nick!
 
-<<<<<<< HEAD
-Hi you two!
-=======
-Hello how are y'all doing right now?
->>>>>>> 64a67ce95e5068b0f16ea6a2a6ed0acd7af5ec57
+
+
+
+```{r}
+plots(car)
+```
 
 ```{r task 1}
 
